--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,6 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "nodemon": "^3.1.9",
-    "serverless": "^4.12.0"
+    "serverless-http": "^3.2.0"
   }
 }
